# semester6

./: .flake8  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  shcherbak_hw1_sort.py  shcherbak_hw2_GHT.py
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt  reference.rst.txt
src/semester6/: __init__.py  console.py  shcherbak_hw2_GHT.py  wikipedia.py
tests/: conftest.py  test_console.py  test_shcherbak_hw2_GHT.py  test_wikipedia.py
